--- a/ChrisKing.css
+++ b/ChrisKing.css
@@ -20,6 +20,10 @@ h4{
 }
 
 /* classes */
+.description{
+    width: 90%;
+    margin-left: 5%;
+}
 .profilepic{
     margin-left: 10px;
     margin-top: 10px;
@@ -35,6 +39,12 @@ h4{
     background-color: black;
     width: 661px;
     height: 388px;
+}
+.CovidPic{
+    width: 500px;
+    height: 290px;
+    background-color: black;
+    margin-left: calc(50% - 250px);
 }
 .picture{
     margin-left: calc(50% - 91px);
