--- a/projects.css
+++ b/projects.css
@@ -52,6 +52,12 @@ body{
     text-decoration: none;
 }
 
+.menu div{
+    color: white;
+    font-size: 1.2vw;
+    text-decoration: none;
+}
+
 .menu div:hover {
     background-color: grey;
 }
