--- a/projects.css
+++ b/projects.css
@@ -48,25 +48,24 @@ body{
 
 .menu a{
     color: white;
-    font-size: 1.2vw;
+    font-size: 1.1vw;
     text-decoration: none;
 }
 
-.menu div{
+.menu div div{
     color: white;
-    font-size: 1.2vw;
+    font-size: 1.1vw;
     text-decoration: none;
     border-color: white;
     border-left: hidden;
     border-right: hidden;
-    border-style: dashed;
     border-top: hidden;
     border-width: 5px;
     padding-bottom: 5%;
     padding-top: 5%;
 }
 
-.menu div:hover {
+.menu div div:hover {
     background-color: grey;
 }
 
