--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+/* HTML Elements */
+a {
+    color: white;
+}
+
 body{
   background-color: rgb(32, 32, 32);
   background-image: linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(45deg, black 25%, transparent 25%, transparent 75%, black 75%, black), linear-gradient(to bottom, rgb(8, 8, 8), rgb(32, 32, 32));
@@ -6,6 +11,8 @@ body{
   margin: 0%;
 }
 
+
+/* Classes */
 .container {
   height: 100%;
   width: 100%;
@@ -15,23 +22,23 @@ body{
   justify-content: center;
 }
 
-.name{
-    font-size: 7vw;
-    color: darkred;
-}
-
 .info{
-    font-size: 2.5vw;
+    font-size: 36px;
     text-align: center;
     color: lightgrey;
 }
-
 .info p{
     font-size: 36px
 }
 
+.name{
+    font-size: 66px;
+    color: darkred;
+    text-align: center;
+}
+
 .profile-picture{
-  margin-top: 250px;
+  margin-top: 450px;
   margin-left: 100px;
   height: 100%;
   width: 100%;
@@ -41,23 +48,4 @@ body{
   justify-content: center;
   opacity: 25%;
   z-index: -1;
-}
-
-a {
-    color: white;
-}
-
-.header {
-  margin-top: 2%;
-  text-align: right;
-}
-
-.header a{
-    background-color: black;
-    font-size: 2.5vw;
-    padding-left: 1vw;
-    padding-right: 1vw;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    border-style: solid;
 }
