--- a/projects.css
+++ b/projects.css
@@ -16,6 +16,12 @@ body{
     transform: translateY(-50%);
 }
 
+.description{
+    margin-left: 20%;
+    width: 60%;
+    text-align: center;
+}
+
 .frame {
     margin-top: 1%;
     margin-bottom: 1%;
